# mpit-tg-bot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  metanit.db  pyproject.toml  requirements.txt
database/: database.db
src/: bot.py  settings.py
src/database/: session.py
src/database/models/: __init__.py  base.py  user.py
src/handlers/: __init__.py  start.py
src/schemas/: __init__.py  user.py
src/service/: __init__.py  user.py
