[project]
name = "mpit-tg-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matv864", email = "matv864@gmail.com" }
]
dependencies = [
    "pytelegrambotapi>=4.26.0",
    "python-dotenv>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mpit_tg_bot"]
